# search_bot

./: app.py  create_csv.ipynv  create_csv.py  input.csv  output.csv  pyproject.toml
new_env/: pyvenv.cfg
new_env/Scripts/: activate  activate.bat  futurize-script.py  pasteurize-script.py
pptx_maker/: make_pptx.py
weather201117/: Procfile  auto_prtsc.py  figure1.pptx  main.py  main_search.py  requirements.txt  scrape.py
